--- a/style.css
+++ b/style.css
@@ -108,3 +108,49 @@ footer p {
 .text-left {
     text-align: left;
 }
+
+@media screen and (max-width: 1024px) {
+
+    .holder {
+        width: calc(100% - 24px) !important;
+        padding: 12px;
+    }
+
+    header h1 {
+        font-size: 26px;
+    }
+
+    
+    header h2 {
+        font-size: 20px;
+    }
+
+    section p, #poem p, footer p {
+        font-size: 17px;
+    }
+
+}
+
+@media screen and (max-width: 600px) {
+
+    header h1 {
+        font-size: 20px;
+        padding: 8px 0;
+    }
+
+    
+    header h2 {
+        font-size: 17px;
+        padding: 8px 0;
+    }
+
+    section p, #poem p, footer p {
+        font-size: 16px;
+    }
+
+    #poem p {
+        width: 90%;
+        text-align: center !important;
+    }
+
+}
